Implement prototype win conditions and castleing

--- a/client/src/views/game.scss
+++ b/client/src/views/game.scss
@@ -103,7 +103,7 @@ $cell-size: $space * 16;
             padding-right: $space * 5;
         }
 
-        .active-turn {
+        .active-state {
             font-size: $space * 3;
             margin-bottom: $space * 2;
         }
